--- a/src/templates/base_default.httkweb.html
+++ b/src/templates/base_default.httkweb.html
@@ -10,10 +10,10 @@
     <title>{page.title}</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="$content.relbaseurl/dist/bootstrap/bootstrap.min.css" rel="stylesheet">
+    <link href="{page.relbaseurl}/dist/bootstrap/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="$content.relbaseurl/resources/css/jumbotron.css" rel="stylesheet">
+    <link href="{page.relbaseurl}/resources/css/jumbotron.css" rel="stylesheet">
 
   </head>
 <style>
@@ -38,7 +38,7 @@
 
     <nav class="navbar navbar-custom navbar-expand-md navbar-static-top border-bottom border-3 border-darkgrey">
       <div class="btn-group">
-	<button type="button" class="btn btn-info" style="padding:0; line-height: 0; border: 0; margin: 0;"><a href="$content.relbaseurl/index.html" style="padding:0; line-height: 0; border: 0; margin: 0;"><img src="$content.relbaseurl/resources/img/rickard_armiento_banner.png" alt="Rickard Armiento" /></a></button>
+	<button type="button" class="btn btn-info" style="padding:0; line-height: 0; border: 0; margin: 0;"><a href="{page.relbaseurl}/index.html" style="padding:0; line-height: 0; border: 0; margin: 0;"><img src="{page.relbaseurl}/resources/img/rickard_armiento_banner.png" alt="Rickard Armiento" /></a></button>
 	<button type="button" class="btn btn-primary dropdown-toggle btn-light" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 	  <span class="caret"></span>
 	  <span class="sr-only"></span>
@@ -64,7 +64,7 @@
             <a class="nav-link" data-toggle="tab" href="#cv">BIO / CV</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="$content.relbaseurl" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">More</a>
+            <a class="nav-link dropdown-toggle" href="{page.relbaseurl}" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">More</a>
             <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
               <a class="dropdown-item" data-toggle="tab" href="#otherworks">Other works</a>
               <a class="dropdown-item" data-toggle="tab" href="#media">In media</a>
