--- a/src/templates/base_default.httkweb.html
+++ b/src/templates/base_default.httkweb.html
@@ -89,8 +89,8 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="$content.relbaseurl/dist/jquery/jquery-slim.min.js"><\/script>')</script>
-    <script src="$content.relbaseurl/dist/bootstrap/bootstrap.min.js"></script>
+    <script>window.jQuery || document.write('<script src="{page.relbaseurl}/dist/jquery/jquery-slim.min.js"><\/script>')</script>
+    <script src="{page.relbaseurl}/dist/bootstrap/bootstrap.min.js"></script>
 
 <script>
   $(document).ready(function() {{
