--- a/src/templates/base_default.httkweb.html
+++ b/src/templates/base_default.httkweb.html
@@ -47,64 +47,39 @@
 	  <a class="dropdown-item" href="https://liu.se/en/organisation/liu/ifm/teofy">Theoretical Physics, LiU</a>
 	</div>
       </div>
-      <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#header_tabs" aria-controls="header_tabs" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="header_tabs" aria-controls="header_tabs" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="header_tabs">
 	<ul class="navbar-nav nav ml-auto" role="tablist">
           <li class="nav-item">
-            <a class="nav-link" data-toggle="tab" href="#about">About me</a>
+            <a class="nav-link" href="index.html">About me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" data-toggle="tab" href="#publications">Publications</a>
+            <a class="nav-link" href="publications.html">Publications</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" data-toggle="tab" href="#cv">BIO / CV</a>
+            <a class="nav-link" href="cv.html">BIO / CV</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="{page.relbaseurl}" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">More</a>
             <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
-              <a class="dropdown-item" data-toggle="tab" href="#otherworks">Other works</a>
-              <a class="dropdown-item" data-toggle="tab" href="#media">In media</a>
-              <a class="dropdown-item" data-toggle="tab" href="#meetings">Meetings</a>
-              <a class="dropdown-item" data-toggle="tab" href="#calendar">My Calendar</a>
-              <a class="dropdown-item" data-toggle="tab" href="#teaching">Teaching</a>
-              <a class="dropdown-item" data-toggle="tab" href="#projects">Diploma and Project Works</a>
+              <a class="dropdown-item" href="otherworks.html">Other works</a>
+              <a class="dropdown-item" href="media.html">In media</a>
+              <a class="dropdown-item" href="meetings.html">Meetings</a>
+              <a class="dropdown-item" href="calendar.html">My Calendar</a>
+              <a class="dropdown-item" href="teaching.html">Teaching</a>
+              <a class="dropdown-item" href="projects.html">Diploma and Project Works</a>
             </ul>
           </li>
 	</ul>
       </div>
     </nav>
-  <div class="container">
-    <main role="main">
-      <div class="document">
-        {content}
-      </div>
-    </main>
+    {content}
   </div>
 </body>
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="{page.relbaseurl}/dist/jquery/jquery-slim.min.js"><\/script>')</script>
-    <script src="{page.relbaseurl}/dist/bootstrap/bootstrap.min.js"></script>
-
-<script>
-  $(document).ready(function() {{
-
-    var hash = document.location.hash;
-    var prefix = "tab_";
-      if (hash) {{
-      $('a[data-toggle="tab"][href="'+hash.replace(prefix,"")+'"]').tab('show');
-      }}
-
-    // Change hash for page-reload
-                 $('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {{
-      window.location.hash = e.target.hash.replace("#", "#" + prefix);
-                 }});
-  }});
-</script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script>window.jQuery || document.write('<script src="{page.relbaseurl}/dist/jquery/jquery-slim.min.js"><\/script>')</script>
+<script src="{page.relbaseurl}/dist/bootstrap/bootstrap.min.js"></script>
 </html>
